SERVER-39473 Should not report isMaster while stepping down conditionally